# Djano_CRM

./: .pre-commit-config.yaml  pyproject.toml  requirements.prod.txt  requiremnts.txt
src/mysite/: settings.py
